adicionando e-mail de contato novamente e nova linha

--- a/contato.html
+++ b/contato.html
@@ -8,5 +8,6 @@
 <body>
     <h1>Contato</h1>    
     <p>Entre em contato pelo e-mail gui@alura.com</p>
+    <p>Ou pelo seguinte e-mail: </p>
 </body>
 </html>
