Update contato.html com e-mail do guilherme

--- a/contato.html
+++ b/contato.html
@@ -6,6 +6,7 @@
     <title>Contatos</title>
 </head>
 <body>
-    <h1>Lista de contatos</h1>    
+    <h1>Lista de contatos</h1>  
+    <p>Para entrar em contato envie um e-mail para A Alura: guilherme@alura.com.br</p>
 </body>
 </html>
